# nerDash

./: .gitignore  .vdj  Dockerfile  README.md  cards.py  chromadb.py  docker-compose.yml  eda.py  graphs.py  main.py  mkdocs.yml  mongo.py  nlp.py  pyproject.toml  requirements.txt  requirements.txt.bak  utils.py
.streamlit/: config.toml
controllers/: __init__.py  functions.py  nlp.py  utils.py
docs/reference/: controllers.md  models.md  utils.md  views.md
models/: __init__.py  clusters_8.pkl  mongo.py  queries.py  sentiment_emotion.pkl  topics.pkl  tsne_embeddings.pkl
src/: eda.py  main.py
src/controllers/: __init__.py  functions.py  nlp.py
src/models/: __init__.py  chromadb.py  mongo.py  queries.py
src/utils/: __init__.py  constants.py  functions.py
src/views/: __init__.py  graphs.py
tests/: test_controllers.py  test_graphs.py  test_models_mongodb.py  test_utils.py  test_views.py
utils/: __init__.py  constants.py  functions.py  utils.py
views/: __init__.py  graphs.py
